# CW4_vacancy_parser

./: README.md  main.py  pyproject.toml
src/: abstract.py  hh_api.py  jsonclass.py  sj_api.py  vacancy.py
