[tool.poetry]
name = "cw4-vacancy-parser"
version = "0.1.0"
description = ""
authors = ["Volk0vAlex <volkov.alex1986@gmail.com>"]
readme = "README.md"
packages = [{include = "cw4_vacancy_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
